[project]
name = "monism-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "akracer>=0.0.13",
    "akshare>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "certifi>=2023.7.22",
    "dicttoxml>=1.7.16",
    "diskcache>=5.6.0",
    "httpx>=0.25.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.23",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=1.0.0",
    "langchainhub>=0.1.14",
    "loguru>=0.7.3",
    "lxml>=4.9.0",
    "mini-racer>=0.12.4",
    "numexpr>=2.11.0",
    "numpy>=1.24.0",
    "orjson>=3.9.0",
    "pandas>=2.0.0",
    "py-mini-racer>=0.6.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "subprocess32>=3.5.4 ; python_full_version < '3.3'",
    "wikipedia>=1.4.0",
    "xmltodict>=0.14.2",
    "yfinance>=0.2.18",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
]
